fixes spacing

--- a/app/assets/stylesheets/customOverrides/index_gallery.scss
+++ b/app/assets/stylesheets/customOverrides/index_gallery.scss
@@ -44,8 +44,25 @@ DEFAULT MOBILE STYLING
   display: none;
 }
 
+.row-cols-2 > * {
+  max-width: 100%;
+  flex: 0 0 100%;
+}
+
 @media screen and (min-width: $small_device) {
   .documents-gallery .thumbnail-container > a {
     height: 200px;
+  }
+
+  .row-cols-2 > * {
+    max-width: 50%;
+    flex: 0 0 50%;
+  }
+}
+
+@media screen and (min-width: $xlarge_device) {
+  .row-cols-2 > * {
+    max-width: 33%;
+    flex: 0 0 33%;
   }
 }
